# parity-bridges-common

./: Cargo.toml  WORKSHOP.md
deployments/local-scripts/: relay-millau-to-template.sh  relay-template-to-millau.sh  run-template-node.sh
modules/dispatch/src/: lib.rs
modules/messages/src/: lib.rs  mock.rs
primitives/chain-template/: Cargo.toml
primitives/chain-template/src/: lib.rs
primitives/messages/: Cargo.toml
primitives/messages/src/: lib.rs  source_chain.rs
primitives/runtime/src/: lib.rs
relays/bin-substrate/: Cargo.toml
relays/bin-substrate/src/chains/: millau_headers_to_template.rs  millau_messages_to_rialto.rs  mod.rs  rialto_messages_to_millau.rs  template.rs  template_headers_to_millau.rs  template_messages_to_millau.rs
relays/bin-substrate/src/cli/: bridge.rs  init_bridge.rs  relay_headers.rs
relays/client-template/: Cargo.toml
relays/client-template/src/: lib.rs
