[workspace]
resolver = "2"

members = [
	"bin/*/node",
	"bin/*/runtime",
	"fuzz/*",
	"modules/*",
	"primitives/*",
	"relays/*",
]

[patch.crates-io]
jsonrpsee-proc-macros = { git = "https://github.com/paritytech/jsonrpsee", branch = "na-fix-td-issue" }
jsonrpsee-ws-client = { git = "https://github.com/paritytech/jsonrpsee", branch = "na-fix-td-issue" }
